objects/Sub_Process_Type__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field used to check whether Sub process Template record is active or not</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Tasks_Must_Be_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean check to see if all the Task are completed underneath Sub Process</description>
        <label>All Tasks Must Be Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>unique identifier for a record that can be used when importing record, searable &amp; etc.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Tasks__c</fullName>
        <description>Used to count the number of Tasks in the parent Sub Process</description>
        <label>Number of Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Process_Type_Name__c</fullName>
        <formula>Process_Type__r.Process_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Process Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Type__c</fullName>
        <label>Process Type</label>
        <referenceTo>Process_Type__c</referenceTo>
        <relationshipName>Sub_Process_Types</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <description>Used to identify the Sequence number of the record for sorting</description>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Used to identify the Stage of the Sub Process Template Record</description>
        <label>Sub Process Template Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group Structure</fullName>
                </value>
                <value>
                    <fullName>Enrollment Data Card</fullName>
                </value>
                <value>
                    <fullName>Benefit Setup</fullName>
                </value>
                <value>
                    <fullName>Change System Request</fullName>
                </value>
                <value>
                    <fullName>Performance Guarantee</fullName>
                </value>
                <value>
                    <fullName>Summary of Benefits and Coverage</fullName>
                </value>
                <value>
                    <fullName>Account Kick-off Meeting</fullName>
                </value>
                <value>
                    <fullName>Marketing Materials</fullName>
                </value>
                <value>
                    <fullName>Blue Rewards and Wellness</fullName>
                </value>
                <value>
                    <fullName>Setup Vision</fullName>
                </value>
                <value>
                    <fullName>Setup Magellan</fullName>
                </value>
                <value>
                    <fullName>Process Enrollment</fullName>
                </value>
                <value>
                    <fullName>Par Plan Custom Letters</fullName>
                </value>
                <value>
                    <fullName>Accommodation of Contraceptive Services</fullName>
                </value>
                <value>
                    <fullName>Benefit Contract</fullName>
                </value>
                <value>
                    <fullName>Implementation Plan</fullName>
                </value>
                <value>
                    <fullName>Benefit Design Doc</fullName>
                    <label>Benefit Design</label>
                </value>
                <value>
                    <fullName>CYC</fullName>
                </value>
                <value>
                    <fullName>Setup Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Setup Dental</fullName>
                </value>
                <value>
                    <fullName>Carve-Out Pharmacy</fullName>
                </value>
                <value>
                    <fullName>ID Cards</fullName>
                </value>
                <value>
                    <fullName>Administrative Service Agreement</fullName>
                </value>
                <value>
                    <fullName>Business Associate Agreement and Confirmation (BAA/BAC)</fullName>
                </value>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>Benefit Request</fullName>
                </value>
                <value>
                    <fullName>ARC Approval</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Quote Delivered</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Used to identify the status of the record</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Process_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sub Process Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Used_For__c</fullName>
        <description>Used to identify whether it’s a pre-sales/post-sales active record</description>
        <label>Used For</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Sales</fullName>
                </value>
                <value>
                    <fullName>Post-Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Setup Objects used for AIA Workplan 
AIA - Custom object used to store the Stage, type &amp; status of Sub Process Template . This object is a child to Process Template for AIA Workplan. 
This object will replace the old functionality of AIA WorkPlan Type Stage. 
This is implemented for JUNE-2018 Release.</description>
    <label>Sub Process Template</label>
    <nameField>
        <displayFormat>SPT-{000000}</displayFormat>
        <label>Sub Process Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sub Process Template</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>All_Tasks_Must_Be_Completed__c</columns>
        <columns>External_ID__c</columns>
        <columns>Process_Type__c</columns>
        <columns>Sequence_Number__c</columns>
        <columns>Stage__c</columns>
        <columns>Used_For__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Parent_Process_Type_Name__c</columns>
        <columns>Sub_Process_Name__c</columns>
        <columns>Stage__c</columns>
        <columns>Used_For__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>